@@ -44,6 +44,8 @@ gboolean gconfd_logfile_change_listener (GConfDatabase *db,
 
 gboolean gconfd_check_in_shutdown (CORBA_Environment *ev);
 
+void gconfd_need_log_cleanup (void);
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
